feat(translationFile): Add swagger for translationFile Controller
