# src/api/translationFile/translationFile.typing.ts
@@ -8,3 +8,13 @@ export interface ITranslationFileDataItem {
   value: string;
   description: string;
 }
+
+export interface ITranslationFileRead {
+  _id: string;
+  lang: string;
+  data: ITranslationFileDataItem[];
+}
+
+export interface ITranslationFileUpdate extends ITranslationFileRead {}
+
+export interface ITranslationFileDelete extends ITranslationFileRead {}
